# yomiage

./: compose.yml  pyproject.toml
docker/bot/: Dockerfile
docker/coeiroink/: Dockerfile  completed.patch  requirements.txt
docker/coeiroink/assets/: engine_manifest.json
docker/coeiroink/assets/engine_manifest_assets/: dependency_licenses.json  terms_of_service.md  update_infos.json
